# quant_mcp_repo

./: .env.example  .gitignore  README.md  equity_curve.csv  pyproject.toml  trades.csv
.agents/rules/: important-rules.md
scripts/: register_daily_data_append_task.ps1  run_daily_data_append.ps1
src/quant_mcp/: __init__.py  enums.py  logging.py  main.py  settings.py
src/quant_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/quant_mcp/adapters/: __init__.py
src/quant_mcp/adapters/kraken/: private_client.py  public_client.py  signer.py
src/quant_mcp/adapters/persistence/: json_store.py  (+1 more)
src/quant_mcp/api/: fastapi_app.py
src/quant_mcp/domain/: __init__.py  approval.py  common.py  dataset.py  execution.py  strategy.py  validation.py
src/quant_mcp/experiments/: __init__.py  strategy_expansion_report.py  trend_backtest.py
src/quant_mcp/mcp/: __init__.py  prompts.py  resources.py  server.py  tools.py  workflow_prompts.py
src/quant_mcp/ops/: __init__.py  daily_data_append.py  expand_history.py  history_archive.py
src/quant_mcp/paper/: __init__.py  sol_volume_breakout.py
src/quant_mcp/research/: __init__.py  backtest_engine.py  strategy_expansion.py
src/quant_mcp/services/: __init__.py  approval_service.py  backtest_service.py  dataset_service.py  execution_service.py  feature_service.py  forward_test_service.py  ml_signal_service.py  risk_service.py  strategy_service.py  walkforward_service.py
src/quant_mcp/tests/: test_append_only_ingestion.py  test_approval_required_for_live.py  test_backtest_no_shuffle.py  test_risk_gates.py
