[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-mcp"
version = "0.1.0"
description = "Research-first FastMCP server for dataset maintenance, validation, and controlled Kraken autotrading"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI for Christopher" }]
dependencies = [
  "fastmcp>=2.14.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "pyarrow>=17.0.0",
  "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/quant_mcp/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
